[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spatia3d"
version = "0.1.0"
description = "Robust 3D reconstruction and cell-type deconvolution for spatial transcriptomics via joint registration, unrolled optimization, and 3D graph learning."
requires-python = ">=3.10"
readme = "README.md"

[tool.setuptools.packages.find]
include = ["spatia3d*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
